--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
+output/qlora-ner-output-10-fewshot/checkpoint-7018/** filter=lfs diff=lfs merge=lfs -text
